--- a/frontend/src/pages/Qualite/qualite.css
+++ b/frontend/src/pages/Qualite/qualite.css
@@ -1,7 +1,15 @@
 .qualite {
-    padding: 20px;
-    background-color: #f9f9f9;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.graph-container {
+  width: 100%;
+  height: 400px;  /* Ajuste la hauteur du graphique comme nécessaire */
+  margin-bottom: 30px; /* Ajoute un espacement sous le graphique pour éviter qu'il se superpose avec le tableau */
+}
   
   h2 {
     text-align: center;
